// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-reference.numeric (provider=cockroachdb, fieldType=BigInt) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Float) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Int) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=BigInt) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=Float) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=mongodb, fieldType=Int) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=BigInt) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=Float) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=mysql, fieldType=Int) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=BigInt) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Float) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Int) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlite, fieldType=BigInt) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Float) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Int) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=BigInt) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected BigInt or BigIntFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Float) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided IntFieldRefInput<Product>, expected Float or FloatFieldRefInput.


`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Int) wrong column numeric type 1`] = `

Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:90:37

   87 })
   88 
   89 test('wrong column numeric type', async () => {
→  90   const products = prisma.product.findMany({
          where: {
            quantity: {
              gt: prisma.product.fields.wrongType
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
          }
        })

Argument gt: Got invalid value prisma.product.fields.wrongType on prisma.findManyProduct. Provided FloatFieldRefInput<Product>, expected Int or IntFieldRefInput.


`;
